syntax = "proto3";

package messages;

import "google/protobuf/duration.proto";

option go_package = "github.com/nandesh-dev/subtle/generated/proto/messages";

message GetSubtitleRequest {
  string id = 1;
}

message GetSubtitleResponse {
  string id = 1;
  string title = 2;
  SubtitleStage stage = 3;
  bool is_processing = 4;
  bool import_is_external = 5;
  SubtitleOriginalFormat original_format = 6;
  repeated string cue_ids = 7;
}

message GetSubtitleCueRequest {
  string id = 1;
}

message GetSubtitleCueResponse {
  string id = 1;
  google.protobuf.Duration start = 2;
  google.protobuf.Duration end = 3;
  repeated string segment_ids = 4;
}

message GetSubtitleCueOriginalDataRequest {
  string subtitle_cue_id = 1;
}

message GetSubtitleCueOriginalDataResponse {
  string subtitle_cue_id = 1;
  string text = 2;
  bytes png_encoded_image_data = 3;
}

message GetSubtitleCueSegmentRequest {
  string id = 1;
}

message GetSubtitleCueSegmentResponse {
  string id = 1;
  string text = 2;
}

enum SubtitleStage {
  SUBTITLE_STAGE_UNSPECIFIED = 0;
  SUBTITLE_STAGE_DETECTED = 1;
  SUBTITLE_STAGE_EXTRACTED = 2;
  SUBTITLE_STAGE_FORMATED = 3;
  SUBTITLE_STAGE_EXPORTED = 4;
}

enum SubtitleOriginalFormat {
  SUBTITLE_ORIGINAL_FORMAT_UNSPECIFIED = 0;
  SUBTITLE_ORIGINAL_FORMAT_SRT = 1;
  SUBTITLE_ORIGINAL_FORMAT_ASS = 2;
  SUBTITLE_ORIGINAL_FORMAT_PGS = 3;
}
